--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ListActivity"></activity>
+        <activity android:name=".RegisterStudentActivity"></activity>
+        <activity android:name=".ListActivity" />
         <activity android:name=".GpaResultActivity" />
         <activity android:name=".HelpActivity" />
         <activity android:name=".NoteActivity" />
